[gd_scene load_steps=3 format=3 uid="uid://dschjhap3lsne"]

[ext_resource type="Script" uid="uid://mytt7mevyfc5" path="res://Scenes/HUD/hud.gd" id="1_33i1w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipdwu"]
bg_color = Color(0.237539, 0.237539, 0.237539, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_33i1w")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.819023, 0.818067, 3.85046e-07, 1)
theme_override_font_sizes/font_size = 32
text = "SCORE: "

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.819608, 0.819608, 0, 1)
theme_override_font_sizes/font_size = 32
text = "LIVES: 3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -137.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0.819608, 0.819608, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Godot ROCKS!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.819608, 0.819608, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_ipdwu")
text = " START "

[node name="Timer" type="Timer" parent="."]
